2003/09/04 21:32 muppetman

	* Gnome2.pm, README, debian/changelog, META.yml: prep for 0.34 release

	* xs/GnomePopupMenu.xs, MANIFEST: new stuff.

	* TODO: updated

2003/08/22 01:57 muppetman

	* Gnome2.pm, README, META.yml, debian/changelog, MANIFEST:
	updated for 0.32 release

2003/08/19 21:11 rwmcfa1

	* Makefile.PL: added realclean removal of build dir to postamble 
	section.

2003/08/18 21:16 muppetman

	* xs/GnomeAppHelper.xs: all the parts were there, they just weren't
	plugged in.  refilling the GnomeUIInfo after creating menus and such
	now works.

2003/08/18 12:34 muppetman

	* debian/*: patch from james curbo adds debian packaging stuff

2003/07/25 10:21 muppetman

	* Gnome2.pm, README: bump version to 0.30

2003/07/23 16:46 muppetman

	* README, Makefile.PL: update required versionf of Gtk2 and Glib to
	ensure that the gchar_own typemap (introduced in 0.90) is available.

2003/07/18 12:49 muppetman

	* xs/GnomeProgram.xs: change default for the module_info to
	libgnomeui (since that's what most people want) and allow it to
	be omitted.

	* Gnome2.pm META.yml README: bump version number to 0.28 for release

2003/07/11 01:00 muppetman

	* gnomeuiinfo.typemap, gnome2perl.h, Makefile.PL, xs/GnomeAppHelper.xs:
	added support for GnomeUIInfo, and thus for $app->create_menu,
	$app->create_toolbar, and a couple other of the gnome-app-helper.h functions.
	ported the code from gtk-perl to retain some unity in the code, but 
	expect a reference to an array of GnomeUIInfo hashes, not a list of them
	on the stack.

2003/07/05 07:08 pcg

	* META.yml: Add module meta-data in YAML for CPAN.

        * xs/GnomeAppBar.xs, xs/GnomeGConf.xs: use gchar_own* to avoid
        memleak.

2003/07/02 16:12 rwmcfa1

	* maps: removed all of the deprecated widgets, they had no xs files
	so they wouldn't be useful anyway.

	* t/00.Gnome2.t: initial import, just uses the module for now, i.e. 
	makes sure that we don't have undefined symbols and the like

2003/06/20 11:34 muppetman
