@@ -1,3 +1,9 @@
+2003/09/06 19:23 rwmcfa1
+
+	* Makefile.PL: dist-rpms build target added
+
+	* perl-Gnome2.spec.in: initial import
+
 2003/09/04 21:32 muppetman
 
 	* Gnome2.pm, README, debian/changelog, META.yml: prep for 0.34 release
